# personal-wiki

./: .gitignore  LICENSE  PRINCIPLES.md  README.md  install-skill.sh  install.sh  pyproject.toml
docs/: introduction.md  v0.2.0-architecture.md  v0.2.0-requirements.md
scripts/: wiki_weekly_notify.py
skill/wiki-ask/: SKILL.md
skill/wiki-capture/: SKILL.md
skill/wiki-knowledge/: SKILL.md
skill/wiki-promote/: SKILL.md
wiki_cli/: main.py
wiki_cli/commands/: browse.py  capture.py  chat.py  compile.py  gc.py  ingest.py  init.py  lint.py  promote.py  query.py  search.py  status.py
wiki_cli/core/: compiler.py  config.py  llm.py  state.py
wiki_cli/prompts/: compile.py  ingest.py  lint.py  query.py
wiki_cli/utils/: fetcher.py  frontmatter.py  markdown.py
